proximo mercado pago

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,4 +2,5 @@
   <router-outlet></router-outlet>
   <!-- Toast Container - Notificaciones globales -->
   <app-toast-container />
+  <app-modal />
 </div>
